ready for live testing (#112)
* annoying

* cleaning

* new client

* cleaning, will remake the client luncher once client is ready

* updating for new client.

* need set aside some projects, player following will get completed but at this time its just another thing on the TODO list that currently has bugs

* banking mostly complete with tab saving. a few features like placeholders need to be completed and a few tarnish things removed or changed over to something we would use e.g  bank vault.

* tarnish pf and changes to support the client

* more button id  updates, and tarnish def info/path finding needed data like object sizes trying to figure out best way to not lose our data for migration to the item defs

* npc stuff and ojbect stuff

* path finding from tarnish. mostly complete. player clicking on an object, but then clicking to run to a different location entirely. The server will still make them face the object at the end of the movement

* cleaning up npc's stuff extra features

* npc redesign not complete

* just boring fixing stuff broken overitme from so much refactoring/repacking and client to koltin migration

* getting ready for item updates to load more items that we now have

* combat stuff, mostly melee for now. adding spec bar but will gate it with wolrd 2 since I'm thinking players may want to vote/choose if we have this as its never been a dodian feature. I'd vote yes as I think it will expand combat to have more features and what ever doesnt have spec bars working?  Also adding it to duel rules so if it does get added to main world that will be there and should already work as normal. Also we are loading the jsons full values so we even have weight not that we may use it but its there if needed. current equipment interface updates with weight not correctly as it only goes by what you have on but the rest could be added. Changing combat attack style now no longer cancels your attack on the npc same with spec bar/orb so changing attack to accu